Added backup.py/cc and cout_*.txt files

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,9 @@ log.txt
 G__HDFS.*
 __init__.py
 *~
+test/*_v*.py
+python/analyzeConfig_charge_flip_v1.py
+python/analyzeConfig_charge_flip_vOriginal.py
+bin/*_v*.cc
+*/cout_*.txt
 
